# HomeworkHelperServer

./: .gitattributes  .gitignore  .gitmessage  AGENTS.md  ANDROID_CLIENT_DEVICE_QA_REPORT.md  LICENSE  MULTI_PC_SYNC.md  PR-DESCRIPTION.md  PROJECT_WORK_PRIORITIES.md  README.md  REMOTE_CONNECTION_SUPERVISOR.md  WORKFLOW.md  admin_utils.py  api_client.py  api_client.py.backup  app_data.db  auth_manager.py  build.py  build.version.example.json  build.version.json  build_android_remote.py  build_nuitka.py  claude.md  clustering.py  connectivity-automation-live-check.md  crud.py  current_plans.md  data_manager.py  data_models.py  database.py  dialogs.py  docker-compose.yml  gemini.md  homework_helper.pyw  homework_helper.spec  installer.iss  instance_manager.py  launcher.py  macos-client-regression-checklist.md  macos-remote-client-test-tutorial.md  (+31 more)
.claude/: README.md  SESSION_RESUME.md  SessionStart  analysis_report.md  game_schema_id_investigation.md  settings.json  work_progress.md
.githooks/: commit-msg
certs/: create_cert.ps1
docs/: add_this_to_milestone.md  architecture.md  data-safety-policy.md  dev-setup-guide.md  git-workflow.md  migration-feature-inventory.md  migration-smoke-checklist.md  milestone.md  mvp-roadmap.md  new-gui-migration.md  os_dependencies.md  phase0-mvp-integration.md  schema-migration.md  v2-gui-completion-audit.md  v2-gui-feature-parity.md  v2-gui-windows-logic-review.md  vm-server-architecture.md
label-studio/: GUI_README.md  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+361 files in other folders)
