[package]
name = "homework-helper-shell"
version = "0.1.0"
description = "HomeworkHelper Tauri shell"
authors = ["lsh930309"]
edition = "2021"

[lib]
name = "homework_helper_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
